vpc-endpoint-opportunities-new-vpc-cloud9.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Creates a VPC with Managed NAT, 2 Public and 2 Private Subnets. Also creates the finding VPC Endpoint opportunities solution"
Metadata:
  License: 
     Description: | 
        Usage is permitted under Apache 2.0 license
        https://github.com/awslabs/aws-cloudformation-templates/blob/master/LICENSE.txt
Parameters:
  VPCName:
    Description: The name of the VPC being created.
    Type: String
    Default: "VPC Public and Private subnets with with NAT Gateway"

  EC2InstanceType:
    Description: EC2 instance type on which IDE runs
    Type:        String
    Default:     m5.large
  
  Route53QueryString: 
    Description: CloudWatch Logs Query String to query Route53 Logs
    Type: String
    Default: "fields @timestamp, query_name | filter query_name ~= 'amazonaws.com.' stats count () as queryCount by query_name sort queryCount desc limit 20"
  
  Env:
    Description:    Please specify the target Env. Used for tagging and resource names. Mandatory LOWER CASE.
    Type:           String
    Default:        "poc"
    AllowedValues:
      - poc
      - dev
      - prod

  User:
    Description:    Please specify the User.
    Type:           String
    Default:        "test"

  RepositoryName:
    Description:    CodeCommit Repository Name
    Type:           String
    Default:        'CodeCommitRepoExample'

  AMI:
    Description:    The AMI for this machine
    Type:           String
    Default:        "amazonlinux-2-x86_64"

Mappings:
  SubnetConfig:
    VPC:
      CIDR: "10.0.0.0/16"
    Public0:
      CIDR: "10.0.0.0/24"
    Public1:
      CIDR: "10.0.1.0/24"
    Private0:
      CIDR: "10.0.2.0/24"
    Private1:
      CIDR: "10.0.3.0/24"

  # This mapping accounts for the scenario when certain AZs
  # are not available to use (this differs on a per account
  # per customer basis). E.g., if the 'b' AZ is not available
  # in a specific region in one's account then updating the
  # list contained in the mapping below here will allow a
  # different AZ to be chosen.
  AZRegions:
    ap-northeast-1:
      AZs: ["a", "b"]
    ap-northeast-2:
      AZs: ["a", "b"]
    ap-south-1:
      AZs: ["a", "b"]
    ap-southeast-1:
      AZs: ["a", "b"]
    ap-southeast-2:
      AZs: ["a", "b"]
    ca-central-1:
      AZs: ["a", "b"]
    eu-central-1:
      AZs: ["a", "b"]
    eu-west-1:
      AZs: ["a", "b"]
    eu-west-2:
      AZs: ["a", "b"]
    sa-east-1:
      AZs: ["a", "b"]
    us-east-1:
      AZs: ["a", "b"]
    us-east-2:
      AZs: ["a", "b"]
    us-west-1:
      AZs: ["a", "b"]
    us-west-2:
      AZs: ["a", "b"]

#1. VPC
Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      CidrBlock:
        Fn::FindInMap:
          - "SubnetConfig"
          - "VPC"
          - "CIDR"
      Tags:
        -
          Key: "Application"
          Value: !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: !Ref VPCName

  PublicSubnet0:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 0, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock:
        Fn::FindInMap:
          - "SubnetConfig"
          - "Public0"
          - "CIDR"
      MapPublicIpOnLaunch: "true"
      Tags:
        -
          Key: "Application"
          Value: !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref VPCName
              - '-public-'
              - !Select [ 0, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]

  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 1, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock:
        Fn::FindInMap:
          - "SubnetConfig"
          - "Public1"
          - "CIDR"
      MapPublicIpOnLaunch: "true"
      Tags:
        -
          Key: "Application"
          Value:
            !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref VPCName
              - '-public-'
              - !Select [ 1, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]

  PrivateSubnet0:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 0, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock:
        Fn::FindInMap:
          - "SubnetConfig"
          - "Private0"
          - "CIDR"
      Tags:
        -
          Key: "Application"
          Value:
            !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Private"
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref VPCName
              - '-private-'
              - !Select [ 0, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]

  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone:
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 1, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]
      CidrBlock:
        Fn::FindInMap:
          - "SubnetConfig"
          - "Private1"
          - "CIDR"
      Tags:
        -
          Key: "Application"
          Value: !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Private"
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref VPCName
              - '-private-'
              - !Select [ 1, !FindInMap [ "AZRegions", !Ref "AWS::Region", "AZs" ] ]

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        -
          Key: "Application"
          Value: !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref "VPCName"
              - '-IGW'


  GatewayToInternet:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Application"
          Value: !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref "VPCName"
              - '-public-route-table'


  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: "GatewayToInternet"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation0:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet0
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetRouteTableAssociation1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicNetworkAcl:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Application"
          Value: !Ref AWS::StackName
        -
          Key: "Network"
          Value: "Public"
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref "VPCName"
              - '-public-nacl'



  InboundHTTPPublicNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "false"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"

  OutboundPublicNetworkAclEntry:
    Type: "AWS::EC2::NetworkAclEntry"
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: "100"
      Protocol: "-1"
      RuleAction: "allow"
      Egress: "true"
      CidrBlock: "0.0.0.0/0"
      PortRange:
        From: "0"
        To: "65535"

  PublicSubnetNetworkAclAssociation0:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet0
      NetworkAclId: !Ref PublicNetworkAcl

  PublicSubnetNetworkAclAssociation1:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref PublicNetworkAcl

  ElasticIP0:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"

  ElasticIP1:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: "vpc"

  NATGateway0:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId:
        Fn::GetAtt:
          - "ElasticIP0"
          - "AllocationId"
      SubnetId: !Ref PublicSubnet0

  NATGateway1:
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId:
        Fn::GetAtt:
          - "ElasticIP1"
          - "AllocationId"
      SubnetId: !Ref PublicSubnet1

  PrivateRouteTable0:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref "VPCName"
              - '-private-route-table-0'

  PrivateRouteTable1:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        -
          Key: "Name"
          Value: !Join
            - ''
            - - !Ref "VPCName"
              - '-private-route-table-1'

  PrivateRouteToInternet0:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable0
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway0

  PrivateRouteToInternet1:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref NATGateway1

  PrivateSubnetRouteTableAssociation0:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnet0
      RouteTableId: !Ref PrivateRouteTable0

  PrivateSubnetRouteTableAssociation1:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1
  
  # CloudWatch Logs group for Route 53 Query Logs
  Route53QueryLogGroup: 
    Type: AWS::Logs::LogGroup
    Properties: 
      RetentionInDays: 7

  Route53QueryLoggingConfig:
    Type: "AWS::Route53Resolver::ResolverQueryLoggingConfig"
    Properties:
      DestinationArn: !GetAtt Route53QueryLogGroup.Arn

  Route53QueryLoggingConfigAssociation:
    Type: "AWS::Route53Resolver::ResolverQueryLoggingConfigAssociation"
    Properties:
      ResolverQueryLogConfigId: !GetAtt Route53QueryLoggingConfig.Id
      ResourceId: !Ref VPC

  # VPC Endpoint for CloudWatch Logs
  cwlInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PrivateDnsEnabled: true
      VpcEndpointType: Interface
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.logs'
      VpcId: !Ref VPC
      SubnetIds: 
        - !Ref PrivateSubnet0

# 5. c9iam.yaml
  AWSCloud9SSMAccessRole:
    Type: AWS::IAM::Role
    Properties: 
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
              - cloud9.amazonaws.com
              - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Description: 'Service linked role for AWS Cloud9'
      Path: '/service-role/'
      ManagedPolicyArns: 
#        - arn:aws:iam::aws:policy/AWSCloud9SSMInstanceProfile
        - arn:aws:iam::aws:policy/AdministratorAccess

  AWSCloud9SSMInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties: 
      InstanceProfileName: AWSCloud9SSMInstanceProfile
      Path: "/cloud9/"
      Roles: 
        - 
          Ref: AWSCloud9SSMAccessRole

# C9.yaml
# Description: AWS Cloud9 Environment with AWS CodeCommit Repository

  C9IDE0:
    Type: 'AWS::Cloud9::EnvironmentEC2'
    Properties:
      Name: !Sub '${User}-${Env}-Cloud9-IDE0'
      Description: !Sub '${User} Cloud9 IDE PrivateSubnet0'
      AutomaticStopTimeMinutes: 30
      ConnectionType: CONNECT_SSM
      ImageId: !Sub ${AMI}
      SubnetId: !Ref PrivateSubnet0
      InstanceType: !Ref 'EC2InstanceType'
      Repositories:
          - RepositoryUrl: !Sub 'https://git-codecommit.${AWS::Region}.amazonaws.com/v1/repos/${RepositoryName}'
            PathComponent: !Sub 'codecommit/${RepositoryName}'

  # Lambda function to query CloudWatch Logs Insight
  CWLogsQueryLambda:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: CWLogsQueryLambda
      Runtime: python3.9
      Handler: index.lambda_handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Timeout: 300
      Code:
        ZipFile: |
          import json
          import boto3
          import os
          import time

          # Get VPC ID from environment variable
          vpc_id = os.environ["VPC_ID"]

          # Get available VPC endpoint services
          client = boto3.client("ec2")
          available_services = []
          try:
              response = client.describe_vpc_endpoint_services()
              available_services = response['ServiceNames']
          except Exception as e:
              print(e)
              print("ERROR: cannot get available VPC endpoint services")
              
          # Get implemented VPC endpoint services
          endpoints = []
          try:
              response = client.describe_vpc_endpoints()
              endpoints = response['VpcEndpoints']
          except Exception as e:
              print(e)
              print("ERROR: Cannot get VPC endpoints")

          # function to check if vpc endpoint exists for given service name
          def check_vpc_endpoint_exists(service_name):
              print("INFO: checking " + vpc_id + " and " + service_name)
              for endpoint in endpoints:
                  if endpoint["VpcId"] == vpc_id and endpoint["ServiceName"] == service_name:
                      return True
              
              return False
                      

          # Function to query CloudWatch Logs Insights for DNS resolutions
          def query_dns_answers(query_name, client, log_group_name, startTime, endTime):
              route53_answers = []

              query_string = 'fields @message | filter query_name == \''+ query_name + '\' | filter query_type == "A" | limit 1'

              response = client.start_query(
                  logGroupName=log_group_name,
                  queryString=query_string,
                  startTime=startTime,
                  endTime=endTime,
                  limit=5
              )
              query_id = response['queryId']
              print("INFO: Query started with ID " + query_id + ", DNS name: " + query_name, ", Query string: " + query_string)
              time.sleep(5)
              
              response = client.get_query_results(
                queryId=query_id
              )
              
              print(response)
              
              # If there is a result, then extract the DNS resolution data from it
              if len(response['results'][0]) > 0:
                  message = response['results'][0][0]['value']
                  
                  # Extract the Rdata from message
                  if "answers" in message:
                      message_dict = eval(message)
                      for a in message_dict["answers"]:
                          route53_answers.append(a["Rdata"])
              
              return route53_answers

          # Function to reverse a query name
          def reverse_query_name(query_name):
              parts = query_name.split('.')
              if parts[-1] == '':
                  parts.pop()
              parts.reverse()
              return '.'.join(parts)

          def lambda_handler(event, context):
              # Get environment variables
              log_group_name = os.environ.get('ROUTE53_LOG_GROUP_NAME')
              #query_string = os.environ.get('ROUTE53_QUERY_STRING')
              query_string = "fields @timestamp, query_name | filter query_name ~= 'amazonaws.com.' | stats count () as queryCount by query_name | sort queryCount desc | limit 20"

              route53_query_name_resolutions = {} # List to hold query names and resolution arrays
              start_time=int(time.time()) - 604800 # One week ago
              end_time=int(time.time()) # Current time

              # Create CloudWatch Logs Insights query
              client = boto3.client('logs')
              response = client.start_query(
                  logGroupName=log_group_name,
                  queryString=query_string,
                  startTime=start_time, # One week ago
                  endTime=end_time,
                  limit=20
              )
              query_id = response['queryId']

              print("INFO: Query started with ID " + query_id + ", Query string: " + query_string)
              
              time.sleep(10)
              
              response = client.get_query_results(
                  queryId=query_id
              )

              print("INFO: Response " + str(response))

              # Loop through results and add to list
              for result in response["results"]:
                  query_name = result[0]['value']
                  query_count = result[1]['value']
                  reverse_name = reverse_query_name(query_name)
                  endpoint_supported = reverse_name in available_services
                  endpoint_exists = check_vpc_endpoint_exists(reverse_name)
                  
                  route53_query_name_resolutions[query_name] = { "queryCount" : query_count , "endpoint_supported": endpoint_supported, "endpoint_exists": endpoint_exists, "answers" : query_dns_answers(query_name, client, log_group_name, start_time, end_time) }
              
              print("INFO: Route53 answers: " + str(route53_query_name_resolutions))

              # return the full response dict
              return route53_query_name_resolutions

    

      Environment:
        Variables:
          VPC_ID: !Ref VPC
          ROUTE53_LOG_GROUP_NAME: !Ref Route53QueryLogGroup
          ROUTE53_QUERY_STRING: !Ref Route53QueryString

  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: read-log-groups
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: queryFlowLogs
                Effect: Allow
                Action: 
                  - 'logs:*'
                Resource:
                  - !GetAtt Route53QueryLogGroup.Arn
              - Sid: getQueryResults
                Effect: Allow
                Action: 
                  - 'logs:GetQueryResults'
                Resource: '*'
        - PolicyName: describe-vpc-endpoints
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Sid: describeVPCEndpoints
                Effect: Allow
                Action: 
                  - 'ec2:DescribeVpcEndpoints'
                  - 'ec2:DescribeVpcEndpointServices'
                Resource: '*'

Outputs:

  VPCId:
    Description: "VPCId of VPC"
    Value: !Ref VPC
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-VPCId"

  PublicSubnet0:
    Description: "SubnetId of public subnet 0"
    Value: !Ref PublicSubnet0
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PublicSubnet0"

  PublicSubnet1:
    Description: "SubnetId of public subnet 1"
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PublicSubnet1"

  PrivateSubnet0:
    Description: "SubnetId of private subnet 0"
    Value: !Ref PrivateSubnet0
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PrivateSubnet0"

  PrivateSubnet1:
    Description: "SubnetId of private subnet 1"
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-PrivateSubnet1"

  DefaultSecurityGroup:
    Description: "DefaultSecurityGroup Id"
    Value: !GetAtt VPC.DefaultSecurityGroup
    Export:
      Name: !Sub "${AWS::Region}-${AWS::StackName}-DefaultSecurityGroup"

  PrivateRouteTable1:
    Description: "PrivateRouteTable1 Id"
    Value: !GetAtt PrivateRouteTable1.RouteTableId

  PrivateRouteTable0:
    Description: "PrivateRouteTable0 Id"
    Value: !GetAtt PrivateRouteTable0.RouteTableId
  
  PublicRouteTable:
    Description: "PublicRouteTable Id"
    Value: !GetAtt PublicRouteTable.RouteTableId

  Cloud9URL0:
    Description: Cloud9 Environment
    Value:
      Fn::Join:
      - ''
      - - !Sub https://${AWS::Region}.console.aws.amazon.com/cloud9/ide/
        - !Ref 'C9IDE0'
